--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,7 @@
 /* Breakpoints */
 $smallMobile: 300px;
 $mobile: 480px;
+$horizonMobile: 900px;
 $smallTablet: 730px;
 $tablet: 959px;
 $desktop: 1199px;
