--- a/src/components/SolveProblems/SolveProblems.scss
+++ b/src/components/SolveProblems/SolveProblems.scss
@@ -17,10 +17,8 @@
         display: flex;
         justify-content: space-between; 
         width: 100%; 
-        /* column-gap: 22px;  */ 
     }
     &__item {
-        /* width: 32%; */
         width: calc(100%/3 - 22px * 2/3); 
         background: #F7F7F7;  
         border-radius: 30px;               
@@ -59,7 +57,6 @@
     
         &__items {
             margin-top: 150px;
-            /* column-gap: 30px;   */
         }
         &__item {
             width: calc(100%/3 - 30px * 2/3); 
@@ -88,12 +85,6 @@
 }
 @media (max-width: $desktop) {
     .problems {
-       /*  &__item{
-            min-height: 260px;
-        }
-        &__wrapper {
-            min-height: 260px;
-        } */
         &__list-title {
             min-height: 60px; 
             font-size: 23px;
@@ -111,7 +102,6 @@
         margin-top: 180px;
         &__items {
             margin-top: 105px;
-            /* column-gap: 20px; */
         }
         &__item {  
             width: calc(100%/3 - 20px * 2/3); 
@@ -127,7 +117,7 @@
             min-height: 40px;
             font-size: 16px;
             line-height: 20px;
-        }       
+        }  
         &__list-item {
             font-size: 13px;
             line-height: 16px;
@@ -173,10 +163,15 @@
             background: none;
             min-height: 40px;
         }
+        &__item:last-child {
+            padding-bottom: 0;
+        }
         &__wrapper{ 
             min-height: 30px;
             padding-top: 0;
+            padding-bottom: 0;
         }
+        
         &__item {
             padding-bottom: 20px;   
         } 
@@ -198,10 +193,8 @@
         }
         .problems__col1, 
         .problems__col2 {
-        /* width: 46%; */
         width: 180px;
             p:last-child {
-
                 padding-bottom: 0;
             }
         } 
@@ -237,4 +230,12 @@
             width: 46%;
         }
     }  
+}
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) {
+    .problems {
+        margin-top: 90px; 
+        &__items {
+            margin-top: 50px;
+        }
+    }
 }
