--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,6 +7,10 @@ $tablet: 959px;
 $desktop: 1199px;
 $ultra: 2000px;
 
+$landscape: 900px;
+$landscapeMiddle: 655px;
+$landscapeSmall: 500px;
+
 /* Colors */
 $bgColor: #ffffff;
 $accentColor: #E88A01;
