Добавила маржин топ 20 всем инфо

--- a/src/pages/AboutProjectPage/AboutProjectPage.scss
+++ b/src/pages/AboutProjectPage/AboutProjectPage.scss
@@ -75,6 +75,11 @@
         }
     }
 }
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) {
+    .about   {
+        margin-top: 20px; 
+    }
+}
 
 
 
