--- a/src/pages/WorkScheme/WorkScheme.scss
+++ b/src/pages/WorkScheme/WorkScheme.scss
@@ -129,3 +129,8 @@
         }
     }
 }
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) {
+    .scheme {
+        margin-top: 20px; 
+    }
+}
