--- a/src/pages/Agreement/Agreement.scss
+++ b/src/pages/Agreement/Agreement.scss
@@ -95,3 +95,8 @@
         }
     }
 }
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) {
+    .agreement {
+        margin-top: 20px; 
+    }
+}
