--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -22,11 +22,11 @@
     display: flex;
     flex-direction: column;
     justify-content:space-between;
-    gap: 50px;
 }
 
 .footer__requisites {
     max-width: 405px;
+    margin-bottom: 40px;
 }
 
 .footer__links {
@@ -58,6 +58,7 @@
     text-align: start;
     border: none;
     background-color: inherit;
+    color: $textColor;
     font-family: "Century Gothic";
     font-size: 16px;
 
@@ -74,6 +75,7 @@
 
     &_desktop {
         display: block;
+        padding-bottom: 5px;
     }
 }
 
@@ -135,8 +137,8 @@
         font-size: 10px;
     }
 
-    .footer__requisitesAndRights {
-        gap: 25px;
+    .footer__requisites {
+        margin-bottom: 25px;
     }
     
     .footer__manager {
@@ -181,6 +183,11 @@
         grid-area: requisites;
         font-size: 8px;
         line-height: 1.6;
+        max-width: 203px;
+    }
+
+    .footer__requisites {
+        margin-bottom: 0;
     }
 
     .footer__email {
@@ -249,6 +256,10 @@
     .footer__manager {
         font-size: 23px;
         line-height: 53px;
+
+        &_desktop {
+            padding-bottom: 0;
+        }
     }
 
     .footer__email {
