--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -216,3 +216,10 @@
         width: 387px;
     }
 }
+
+@media screen and (orientation:landscape)
+and (max-width: $landscape) {
+    .header__inner {
+        height: 100px;
+    }
+}
