--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -70,7 +70,6 @@
 .help__rows {
     display: flex;
     flex-direction: column;
-    gap: 30px;
 }
 
 .help__footer {
@@ -90,7 +89,6 @@
 
 .help__alert {
     display: flex;
-    gap: 5px;
     width: 360px;
     font-size: 12px;
     line-height: 12px;
@@ -100,6 +98,7 @@
 .help__alertIcon {
     width: 15px;
     height: 15px;
+    margin-right: 5px;
 }
 
 .help__agreement {
@@ -124,10 +123,6 @@
     .help__cross {
         width: 11px;
         height: 11px;
-    }
-
-    .help__rows {
-        gap: 20px;
     }
     
     .help__helper {
@@ -174,10 +169,6 @@
         height: 8px;
     }
 
-    .help__rows {
-        gap: 8px;
-    }
-
     .help__helper {
         display: none;
     }
@@ -209,10 +200,6 @@
     .help__logo {
         width: 140px;
     }
-
-    .help__rows {
-        gap: 6px;
-    }
     
     .help__alert {
         width: 200px;
@@ -228,7 +215,7 @@
     }
 
     .help__header {
-        margin-bottom: 101px;
+        margin-bottom: 62px;
     }
 
     .help__logo {
@@ -238,10 +225,6 @@
     .help__cross {
         width: 25px;
         height: 25px;
-    }
-
-    .help__rows {
-        gap: 40px;
     }
 
     .help__alert {
