--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,7 +4,7 @@
     font-family: $generalFont;
     src: url('../assets/fonts/CenturyGothic-Bold.woff2') format('woff2'),
         url('../assets/fonts/CenturyGothic-Bold.woff') format('woff');
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
@@ -13,7 +13,7 @@
     font-family: 'Century Gothic';
     src: url('../assets/fonts/CenturyGothic-BoldItalic.woff2') format('woff2'),
         url('../assets/fonts/CenturyGothic-BoldItalic.woff') format('woff');
-    font-weight: bold;
+    font-weight: 700;
     font-style: italic;
     font-display: swap;
 }
@@ -22,7 +22,7 @@
     font-family: 'Century Gothic';
     src: url('../assets/fonts/CenturyGothic.woff2') format('woff2'),
         url('../assets/fonts/CenturyGothic.woff') format('woff');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
@@ -31,7 +31,7 @@
     font-family: 'Century Gothic';
     src: url('../assets/fonts/CenturyGothic-Italic.woff2') format('woff2'),
         url('../assets/fonts/CenturyGothic-Italic.woff') format('woff');
-    font-weight: normal;
+    font-weight: 400;
     font-style: italic;
     font-display: swap;
 }
