--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -56,6 +56,10 @@
     width: 19px;
     height: 19px;
     fill: $textColor;
+
+    & :hover {
+        fill: $accentColor;
+    }
 }
 
 #dark .help__cross {
