--- a/src/components/ButtonJoin/ButtonJoin.scss
+++ b/src/components/ButtonJoin/ButtonJoin.scss
@@ -1,1 +1,60 @@
 @import "../../styles/vars";
+
+.buttonJoin {
+    display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonJoin_active {
+    transform: translateX(100%);
+    transition: transform 200ms ease;
+  }
+  
+
+.buttonJoin__arrowWrapper {
+    width: 0;
+    height: 28px;
+    overflow: hidden;
+  }
+  
+  .buttonJoin:hover .buttonJoin__arrowWrapper {
+    width: 28px;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    transition: width 0.1s ease-in-out;
+  }
+  
+  .buttonJoin__arrow {
+    width: 30px;
+  }
+  
+
+  @media screen and (max-width: $tablet) {
+    .buttonJoin:hover .buttonJoin__arrowWrapper {
+      width: 0;
+      display: none;
+    }
+  
+    .buttonJoin:active {
+        color: $accentColor;
+    }
+  }
+
+  @media screen and (min-width: $ultra) {
+    .buttonJoin__arrowWrapper {
+        height: 36px;
+      }
+      
+      .buttonJoin:hover .buttonJoin__arrowWrapper {
+        width: 36px;
+        margin-left: 38px;
+      }
+
+    .buttonJoin__arrow {
+        width: 55px;
+      }
+  }
+  
+  
