--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -161,7 +161,7 @@
     }
 
     .help__row:last-child {
-        margin-bottom: 3px;
+        margin-bottom: 10px;
     }
 }
 
@@ -183,6 +183,10 @@
 
     .help__row:not(:last-child) {
         margin-bottom: 6px;
+    }
+
+    .help__row:last-child {
+        margin-bottom: 2px;
     }
 
     .help__row:last-child .help__error {
