--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -28,6 +28,7 @@
     background-color: #F1F0F0;
     border: none;
     border-radius: 4px;
+    font-family: $generalFont;
 
     &:focus {
         outline: none;
