Fix text color for phone number in contacts for dark theme

--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -33,6 +33,10 @@
   flex-direction: column;
 }
 
+#dark .contacts__numbers a {
+  color: $textColor_dark;
+}
+
 .contacts__mapWrapper {
   max-height: 400px;
   margin-bottom: 60px;
