--- a/src/components/ThanksModal/ThanksModal.scss
+++ b/src/components/ThanksModal/ThanksModal.scss
@@ -161,8 +161,7 @@
     }
 }
 
-@media screen and (orientation:landscape)
-and (max-width: $landscape) {
+@media (orientation:landscape) and (max-width: $landscape) {
     .thanksModal__content {
         padding: 37px 10px 38px 10px;
         width: 230px;
