--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -29,7 +29,6 @@
     border: 1px solid transparent;
     border-radius: 4px;
     font-family: $generalFont;
-
     &:focus {
         outline: none;
     }
@@ -40,6 +39,15 @@
     border: none;
     font-size: 16px;
     background-color: #F1F0F0;
+    box-shadow: inset 0 0 0 50px #F1F0F0;
+    -webkit-box-shadow: inset 0 0 0 50px #F1F0F0;
+    -webkit-text-fill-color: #000;
+  }
+
+#dark .help__row .PhoneInputInput {
+    box-shadow: inset 0 0 0 50px #1A1A1A;
+    -webkit-box-shadow: inset 0 0 0 50px #1A1A1A;
+    -webkit-text-fill-color: $bgColor;
   }
 
 #dark .help__input {
