--- a/src/components/PersonalDataInput/PersonalDataInput.scss
+++ b/src/components/PersonalDataInput/PersonalDataInput.scss
@@ -24,6 +24,9 @@
   font-family: $generalFont;
   border: none;
   font-size: 16px;
+  box-shadow: inset 0 0 0 50px $bgColor;
+  -webkit-box-shadow: inset 0 0 0 50px $bgColor;
+  -webkit-text-fill-color: #000;
   &:focus {
     outline: none;
   }
@@ -32,6 +35,9 @@
 #dark .PhoneInputInput {
   background-color: #1a1a1a;
   color: $textColor_dark;
+  box-shadow: inset 0 0 0 50px #1A1A1A;
+  -webkit-box-shadow: inset 0 0 0 50px #1A1A1A;
+  -webkit-text-fill-color: $bgColor;
 }
 
 #dark .personalDataInput__input {
