--- a/src/components/PersonalDataInput/PersonalDataInput.scss
+++ b/src/components/PersonalDataInput/PersonalDataInput.scss
@@ -10,10 +10,22 @@
   background-color: $bgColor;
   color: $textColor;
   font-family: $generalFont;
+  box-shadow: inset 0 0 0 50px $bgColor;
+  -webkit-box-shadow: inset 0 0 0 50px $bgColor;
+  -webkit-text-fill-color: #000;
 
   &:focus {
     outline: none;
   }
+}
+
+#dark .personalDataInput__input {
+  background-color: #1a1a1a;
+  border-color: $textColor_dark;
+  color: $textColor_dark;
+  box-shadow: inset 0 0 0 50px #1A1A1A;
+  -webkit-box-shadow: inset 0 0 0 50px #1A1A1A;
+  -webkit-text-fill-color: $bgColor;
 }
 
 .PhoneInputCountry {
@@ -38,12 +50,6 @@
   box-shadow: inset 0 0 0 50px #1A1A1A;
   -webkit-box-shadow: inset 0 0 0 50px #1A1A1A;
   -webkit-text-fill-color: $bgColor;
-}
-
-#dark .personalDataInput__input {
-  background-color: #1a1a1a;
-  border-color: $textColor_dark;
-  color: $textColor_dark;
 }
 
 #dark .PhoneInput {
