--- a/src/styles/_btn.scss
+++ b/src/styles/_btn.scss
@@ -6,7 +6,7 @@
     font-size: 28px;
     background-color: $accentColor;
     color: #FFFFFF;
-    font-weight: bold;
+    font-weight: 700;
     text-align: center;
     line-height: 28px;
     border: none;
