--- a/src/components/BecomeMember/BecomeMember.scss
+++ b/src/components/BecomeMember/BecomeMember.scss
@@ -21,6 +21,8 @@
     }
     .step__first {
         &_color{
+            margin: 0;
+            padding: 0;
             font-size: 32px;
             font-weight: 700;
             color: #FFFFFF;
@@ -30,12 +32,16 @@
     }
     .step__second,
     .step__third {
+        margin: 0;
+        padding: 0;
         font-size: 32px;
         font-weight: 700;
         @include before_circle;
         @include divider;
     }
     .step__fourth {
+        margin: 0;
+        padding: 0;
         font-size: 32px;
         font-weight: 700;
         @include before_circle;
@@ -215,17 +221,21 @@
             &:before {
                 width: 24px;
                 height: 24px;
-                top:-2px;
-                left: -7px;
+                top:-1px;
+                left: -8px;
                 border: 2px solid #5FAE36;
             }
             &::after{
                 width: 23px;
                 top: 8px;
-                left: 15px;
+                left: 14px;
                 border: 2px solid #5FAE36;
             }  
         }
+        .step__fourth {
+            &:before {
+                left: -7px;
+            }}
         &__btn {
             margin-top: 15px;
         }
