--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -130,6 +130,10 @@
   .form__personalData {
     padding: 30px 23px 15px 22px;
   }
+
+  .form__checkbox {
+    padding: 26px 15px 25px 30px;
+  }
 }
 
 @media (max-width: $smallMobile) {
