--- a/src/components/ButtonJoin/ButtonJoin.scss
+++ b/src/components/ButtonJoin/ButtonJoin.scss
@@ -18,7 +18,6 @@
     transition: transform 200ms ease;
   }
   
-
 .buttonJoin__arrowWrapper {
     width: 0;
     height: 28px;
@@ -40,7 +39,11 @@
 
   @media screen and (max-width: $tablet) {
     .buttonJoin__arrowWrapper {
-        height: 0;
+        height: 20px;
+      }
+
+      .buttonJoin__arrow {
+        width: 20px;
       }
 
     .buttonJoinWrapper:hover .buttonJoin__arrowWrapper {
@@ -48,12 +51,36 @@
       display: none;
     }
 
-    .buttonJoin_active {
-      transform: none;
+    .buttonJoinWrapper:active .buttonJoin__arrowWrapper {
+      width: 20px;
+      display: flex;
+      align-items: center;
+      margin-left: 10px;
+      transition: width 0.1s ease-in-out;
     }
-  
-    .buttonJoin:active {
-      color: $accentColor;
+  }
+
+  @media screen and (max-width: $mobile) {
+    .buttonJoin__arrowWrapper {
+        height: 12px;
+      }
+
+      .buttonJoin__arrow {
+        width: 12px;
+      }
+
+    .buttonJoinWrapper:hover .buttonJoin__arrowWrapper {
+      width: 0;
+      display: none;
+    }
+     
+
+    .buttonJoinWrapper:active .buttonJoin__arrowWrapper {
+      width: 12px;
+      display: flex;
+      align-items: center;
+      margin-left: 5px;
+      transition: width 0.1s ease-in-out;
     }
   }
 
