--- a/src/components/FormButton/FormButton.scss
+++ b/src/components/FormButton/FormButton.scss
@@ -5,19 +5,179 @@
     justify-content: center;
     margin-bottom: 40px;
     font-size: 20px;
+    overflow: hidden;
 }
 
-@media (max-width: $mobile)  {
+.formButton__inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.formButton__arrowWrapper {
+    width: 0;
+    height: 20px;
+    overflow: hidden;
+  }
+
+.formButton:hover .formButton__arrowWrapper {
+    width: 20px;
+    display: grid;
+    grid-template-columns: 10fr 1fr;
+    align-items: center;
+    transition: width 0.1s ease-in-out;
+    overflow: visible;
+}
+
+.formButton__arrow {
+    width: 20px;
+    margin-left: 10px;
+}
+
+  .formButton__arrow_active {
+    transform: translateX(1000%);
+    transition: transform 300ms ease;
+  }
+
+  .formButton:hover .formButton__arrowWrapper_active {
+    width: 0;
+  }
+  
+  .formButton__checkWrapper {
+    position: relative;
+    display: none;
+  }
+  
+  .formButton__checkWrapper_active {
+    display: block;
+  }
+  
+  .formButton__check {
+    position: absolute;
+    width: 18px;
+    top: -7px;
+    right: -5px;
+  }
+  
+  .formButton__sendedText {
+    font-weight: 700;
+    margin-right: 18px;
+  }
+
+@media (max-width: $tablet)  {
     .formButton {
         margin-bottom: 15px;
-        font-size: 12px;
     }
-    
+
+    .formButton:hover .formButton__arrowWrapper {
+        width: 0;
+        height: 20px;
+        overflow: hidden;
+    }
+
+    .formButton:active .formButton__arrowWrapper_active {
+        width: 20px;
+        display: grid;
+        grid-template-columns: 10fr 1fr;
+        align-items: center;
+        transition: width 0.1s ease-in-out;
+        overflow: visible;
+    }
+}
+
+// @media screen and (max-width: $tablet) {
+//     .buttonJoin__arrowWrapper {
+//         height: 20px;
+//       }
+
+//       .buttonJoin__arrow {
+//         width: 20px;
+//       }
+
+//     .buttonJoinWrapper:hover .buttonJoin__arrowWrapper {
+//       width: 0;
+//       display: none;
+//     }
+
+//     .buttonJoinWrapper:active .buttonJoin__arrowWrapper {
+//       width: 20px;
+//       display: flex;
+//       align-items: center;
+//       margin-left: 10px;
+//       transition: width 0.1s ease-in-out;
+//     }
+//   }
+@media (max-width: $mobile)  {
+    .formButton__arrowWrapper {
+        width: 0;
+        height: 12px;
+        overflow: hidden;
+      }
+
+    .formButton:hover .formButton__arrowWrapper {
+        width: 0;
+        height: 12px;
+        overflow: hidden;
+    }
+
+    .formButton:active .formButton__arrowWrapper_active {
+        width: 12px;
+        display: grid;
+        grid-template-columns: 10fr 1fr;
+        align-items: center;
+        transition: width 0.1s ease-in-out;
+        overflow: visible;
+    }
+
+    .formButton__arrow {
+        width: 12px;
+        margin-left: 8px;
+    }
+
+    .formButton__check {
+        width: 11px;
+        top: -5px;
+        right: -5px;
+      }
+      
+      .formButton__sendedText {
+        margin-right: 10px;
+      }
 }
 
 @media (min-width: $ultra)  {
     .formButton {
         margin-bottom: 78px;
     }
+
+    .formButton__arrowWrapper {
+        width: 0;
+        height: 45px;
+        overflow: hidden;
+      }
     
+    .formButton:hover .formButton__arrowWrapper {
+        width: 45px;
+        display: grid;
+        grid-template-columns: 10fr 1fr;
+        align-items: center;
+        transition: width 0.1s ease-in-out;
+        overflow: visible;
+    }
+    
+    .formButton__arrow {
+        width: 45px;
+        margin-left: 18px;
+    }
+
+    .formButton__check {
+        width: 40px;
+        top: -15px;
+        right: -17px;
+      }
+      
+      .formButton__sendedText {
+        margin-right: 35px;
+      }
 }
