--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,6 +13,10 @@ body {
   background-color: $bgColor;
   color: $textColor;
   font-weight: 400;
+  scrollbar-width: none;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 
 main {
