--- a/src/components/HelpInput/HelpInput.scss
+++ b/src/components/HelpInput/HelpInput.scss
@@ -232,6 +232,10 @@
         max-height: 70px;
         margin-bottom: 13px;
     }
+
+    .help__close {
+        top: 0;
+    }
 }
 
 @media screen and (min-width: $ultra) {
@@ -280,5 +284,153 @@
 
     .help__row:last-child {
         margin-bottom: 5px;
+    }
+}
+
+
+
+@media (orientation:landscape) and (max-width: $landscape) {
+    .help__row {
+        display: block;
+
+        &:not(:last-child) {
+            margin-bottom: 0;
+        }
+
+        &:first-child {
+            width: 100%;
+        }
+
+        &:nth-child(2) {
+            width: 40%;
+            padding-right: 20px;
+        }
+
+        &:nth-child(3) {
+            width: 60%;
+        }
+
+        &:nth-child(4) {
+            width: 50%;
+            padding-right: 20px;
+        }
+
+        &:nth-child(5) {
+            width: 50%;
+        }
+
+        &:last-child {
+            width: 100%;
+        }
+    }
+
+    .help__label {
+        font-size: 12px;
+        line-height: 14px;
+        width: 100%;
+    }
+    
+    .help__inputWrapper {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+    
+    .help__input {
+        width: 100%;
+        max-height: 25px;
+        padding: 5px 10px;
+        font-size: 8px;
+        line-height: 12px;
+        border-radius: 2px;
+        margin-bottom: 0;
+        border-width: 2px;
+
+    }
+
+    .help__row .PhoneInputInput {
+        font-size: 8px;
+      }
+
+    .help__input {
+        border-width: 2px;
+    }
+
+    .help__error {
+        position: absolute;
+        top: 22px;
+        left: 84px;
+        text-align: center;
+    }
+
+    .help__row:last-child .help__error {
+        top: 87px;
+        left: 84px;
+    }
+    
+    #dark .help__input_error {
+        border-width: 2px;
+        padding: 1px 9px;
+    }
+    
+    .help__row textarea {
+        max-height: 85px;
+    }
+
+    .help__row:last-child {
+        margin-bottom: 10px;
+    }
+
+    .help__error {
+    top: -9px;
+    right: 0;
+    left: unset;
+    }
+
+    .help__row:last-child .help__error {
+        top: -9px;
+        right: 0;
+        left: unset;
+    }
+}
+
+@media (orientation:landscape) and (max-width: $landscapeMiddle) {
+
+    .help__label {
+        font-size: 10px;
+        line-height: 12px;
+    }
+
+    .help__input {
+        max-height: 20px;
+        margin-bottom: -4px;
+    }
+    .help__error {
+        font-size: 7px;
+        top: 22px;
+        left: 84px;
+    }
+    
+    .help__row textarea {
+        max-height: 40px;
+    }
+
+    .help__error {
+    top: -9px;
+    right: 0;
+    left: unset;
+    }
+
+    .help__row:last-child .help__error {
+        top: -9px;
+        right: 0;
+        left: unset;
+    }
+}
+
+@media (orientation:landscape) and (max-width: $landscapeSmall) {
+    .help__label {
+        font-size: 7px;
+        line-height: 9px;
     }
 }
