--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -108,7 +108,7 @@ h1 {
 }
 
 @media screen and (orientation:landscape)
-and (max-width: 900px) {
+and (max-width: $landscape) and (max-height: 600px) {
   .container__row {
     padding: 0 60px;
   }
