--- a/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
+++ b/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
@@ -125,8 +125,17 @@
         }
     }
 }
-@media screen and (orientation:landscape) and (max-width: $horizonMobile) {
+@media screen and (orientation:landscape) and (max-width: $horizonMobile) and (max-height: 600px) {
     .privacy {
         margin-top: 20px; 
     }
 }
+/* @media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio:0) and (max-height: 600px){ 
+    .privacy {
+        &__list-item {
+            &::before{
+            top: 12px;
+            } 
+        } 
+    }
+} */
