--- a/src/pages/WorkScheme/WorkScheme.scss
+++ b/src/pages/WorkScheme/WorkScheme.scss
@@ -5,6 +5,7 @@
     margin-top: 115px;
     margin-bottom: 172px;
     font-size: 22px;
+
     &_textUp{
         text-transform: uppercase;
     }
@@ -129,8 +130,23 @@
         }
     }
 }
-@media screen and (orientation:landscape) and (max-width: $horizonMobile) {
+@media screen and (orientation:landscape) and (max-width: $horizonMobile)and (max-height: 600px) {
     .scheme {
         margin-top: 20px; 
-    }
+    /*     &__list-item {
+            &::before {
+                -webkit-top: 12px;
+            }
+    } */
 }
+}
+/* this gets chrome */
+/* @media screen and (orientation:landscape) and (max-width: $horizonMobile) and (-webkit-min-device-pixel-ratio:0) and (max-height: 600px){ 
+    .scheme {
+        &__list-item {
+            &::before{
+            top: 12px;
+            } 
+        } 
+    }
+} */
