--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -3,6 +3,8 @@
 .help {
   display: none;
   position: fixed;
+  left: 0;
+  top: 0;
   background-color: rgba(0, 0, 0, 0.4);
   width: 100%;
   height: 100%;
