--- a/src/components/ThanksModal/ThanksModal.scss
+++ b/src/components/ThanksModal/ThanksModal.scss
@@ -3,6 +3,8 @@
 .thanksModal {
     display: none;
     position: fixed;
+    top: 0;
+    left: 0;
     background-color: rgba(0,0,0,.4);;
     width: 100%;
     height: 100%;
